{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 196,
  "lineage": "ae84727d-f4a7-f8c4-228d-0a2f44e36f05",
  "resources": [
    {
      "module": "module.alb_base",
      "mode": "managed",
      "type": "aws_lb",
      "name": "as-2-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:183726524472:loadbalancer/app/as-2-lb-tf/59dc0d74f2cd88d8",
            "arn_suffix": "app/as-2-lb-tf/59dc0d74f2cd88d8",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "as-2-lb-tf-364513618.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:183726524472:loadbalancer/app/as-2-lb-tf/59dc0d74f2cd88d8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "as-2-lb-tf",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0efd36fbe70e6102f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05c92a71b19b20924"
              },
              {
                "subnet_id": "subnet-0641589e58b8cbf7c"
              }
            ],
            "subnets": [
              "subnet-05c92a71b19b20924",
              "subnet-0641589e58b8cbf7c"
            ],
            "tags": {
              "Environment": "as-2-alb-nginx"
            },
            "tags_all": {
              "Environment": "as-2-alb-nginx"
            },
            "vpc_id": "vpc-04b772b5b56bea23d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:183726524472:loadbalancer/app/as-2-lb-tf/59dc0d74f2cd88d8"
          },
          "dependencies": [
            "module.security_group_base.aws_security_group.sg-alb",
            "module.subnet_base.aws_subnet.public",
            "module.vpc_base.aws_vpc.VPC_structure"
          ]
        }
      ]
    },
    {
      "module": "module.alb_base",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:183726524472:listener/app/as-2-lb-tf/59dc0d74f2cd88d8/2a95a3d6acf67144",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:183726524472:targetgroup/as-2-lb-alb-v2/c010ad18b141a998",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:183726524472:listener/app/as-2-lb-tf/59dc0d74f2cd88d8/2a95a3d6acf67144",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:183726524472:loadbalancer/app/as-2-lb-tf/59dc0d74f2cd88d8",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:183726524472:listener/app/as-2-lb-tf/59dc0d74f2cd88d8/2a95a3d6acf67144"
          },
          "dependencies": [
            "module.alb_base.aws_lb.as-2-alb",
            "module.alb_base.aws_lb_target_group.lb-target-v2",
            "module.security_group_base.aws_security_group.sg-alb",
            "module.subnet_base.aws_subnet.public",
            "module.vpc_base.aws_vpc.VPC_structure"
          ]
        }
      ]
    },
    {
      "module": "module.alb_base",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb-target-v2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:183726524472:targetgroup/as-2-lb-alb-v2/c010ad18b141a998",
            "arn_suffix": "targetgroup/as-2-lb-alb-v2/c010ad18b141a998",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:183726524472:targetgroup/as-2-lb-alb-v2/c010ad18b141a998",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:183726524472:loadbalancer/app/as-2-lb-tf/59dc0d74f2cd88d8"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "as-2-lb-alb-v2",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "as-2-tg"
            },
            "tags_all": {
              "Name": "as-2-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04b772b5b56bea23d"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:183726524472:targetgroup/as-2-lb-alb-v2/c010ad18b141a998"
          },
          "dependencies": [
            "module.vpc_base.aws_vpc.VPC_structure"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_base",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Bastion_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:183726524472:instance/i-08f3adccf309c8e0e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08f3adccf309c8e0e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible-green",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-010597fc191c838a8"
              }
            ],
            "primary_network_interface_id": "eni-010597fc191c838a8",
            "private_dns": "ip-10-0-1-172.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.172",
            "public_ip": "44.200.200.173",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0259918bca311d4b4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0641589e58b8cbf7c",
            "tags": {
              "Environment": "dev",
              "Name": "bastion-host-nginx"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "bastion-host-nginx"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f391761f7ab198dc"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "183726524472",
            "id": "i-08f3adccf309c8e0e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security_group_base.aws_security_group.bastion_sg",
            "module.security_group_base.data.http.my_public_ip",
            "module.subnet_base.aws_subnet.public",
            "module.vpc_base.aws_vpc.VPC_structure"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_base",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183726524472:security-group/sg-0f391761f7ab198dc",
            "description": "Allow SSH inbound to Bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f391761f7ab198dc",
            "ingress": [
              {
                "cidr_blocks": [
                  "103.171.172.161/32"
                ],
                "description": "SSH from allowed CIDR",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg-Nginx",
            "name_prefix": "",
            "owner_id": "183726524472",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Nginx-nginx-as-1-bastion-sg"
            },
            "tags_all": {
              "Name": "Nginx-nginx-as-1-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b772b5b56bea23d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "183726524472",
            "id": "sg-0f391761f7ab198dc",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security_group_base.data.http.my_public_ip",
            "module.vpc_base.aws_vpc.VPC_structure"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group_base",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private-ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183726524472:security-group/sg-0813ce48ada47ec05",
            "description": "Allow HTTP from ALB only; all outbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound SSH",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0813ce48ada47ec05",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PORT-80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0efd36fbe70e6102f"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "SSH from Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f391761f7ab198dc"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "nginx-infra-alb-ec2",
            "name_prefix": "",
            "owner_id": "183726524472",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Nginx-infra-asg-sg"
            },
            "tags_all": {
              "Name": "Nginx-infra-asg-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b772b5b56bea23d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "183726524472",
            "id": "sg-0813ce48ada47ec05",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security_group_base.aws_security_group.bastion_sg",
            "module.security_group_base.aws_security_group.sg-alb",
            "module.security_group_base.data.http.my_public_ip",
            "module.vpc_base.aws_vpc.VPC_structure"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group_base",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183726524472:security-group/sg-0efd36fbe70e6102f",
            "description": "Allow HTTP and HTTPS inbound from the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0efd36fbe70e6102f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "Nginx-alb-sg",
            "name_prefix": "",
            "owner_id": "183726524472",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Nginx-alb-sg-nginx"
            },
            "tags_all": {
              "Name": "Nginx-alb-sg-nginx"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b772b5b56bea23d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "183726524472",
            "id": "sg-0efd36fbe70e6102f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc_base.aws_vpc.VPC_structure"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnet_base",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-private-for-as",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183726524472:route-table/rtb-0631b6417e938e281",
            "id": "rtb-0631b6417e938e281",
            "owner_id": "183726524472",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0efb109a5734a71da",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Nginx-Subnet-route-table-private-as-2"
            },
            "tags_all": {
              "Name": "Nginx-Subnet-route-table-private-as-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b772b5b56bea23d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "183726524472",
            "id": "rtb-0631b6417e938e281",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.subnet_base.aws_subnet.public",
            "module.vpc_base.aws_eip.elastic-ip",
            "module.vpc_base.aws_internet_gateway.igw",
            "module.vpc_base.aws_nat_gateway.nat-gateway",
            "module.vpc_base.aws_vpc.VPC_structure"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_base",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-public-for-as",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183726524472:route-table/rtb-0183fdc0e50a1ff6a",
            "id": "rtb-0183fdc0e50a1ff6a",
            "owner_id": "183726524472",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06c0f4cb92b05ea24",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Nginx-Subnet-route-table-public-as-2"
            },
            "tags_all": {
              "Name": "Nginx-Subnet-route-table-public-as-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b772b5b56bea23d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "183726524472",
            "id": "rtb-0183fdc0e50a1ff6a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc_base.aws_internet_gateway.igw",
            "module.vpc_base.aws_vpc.VPC_structure"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_base",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "task-1-rt-assocation-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b36ff45a163c79f6",
            "region": "us-east-1",
            "route_table_id": "rtb-0631b6417e938e281",
            "subnet_id": "subnet-0fa6caf093023c039"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "183726524472",
            "id": "rtbassoc-0b36ff45a163c79f6",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.subnet_base.aws_route_table.route-table-private-for-as",
            "module.subnet_base.aws_subnet.private",
            "module.subnet_base.aws_subnet.public",
            "module.vpc_base.aws_eip.elastic-ip",
            "module.vpc_base.aws_internet_gateway.igw",
            "module.vpc_base.aws_nat_gateway.nat-gateway",
            "module.vpc_base.aws_vpc.VPC_structure"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_base",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "task-1-rt-assocation-private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0413e6a83f6ee511e",
            "region": "us-east-1",
            "route_table_id": "rtb-0631b6417e938e281",
            "subnet_id": "subnet-0f6ea9a8cf593cfce"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "183726524472",
            "id": "rtbassoc-0413e6a83f6ee511e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.subnet_base.aws_route_table.route-table-private-for-as",
            "module.subnet_base.aws_subnet.private",
            "module.subnet_base.aws_subnet.public",
            "module.vpc_base.aws_eip.elastic-ip",
            "module.vpc_base.aws_internet_gateway.igw",
            "module.vpc_base.aws_nat_gateway.nat-gateway",
            "module.vpc_base.aws_vpc.VPC_structure"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_base",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "task-1-rt-assocation-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cfa8b7b243561ab0",
            "region": "us-east-1",
            "route_table_id": "rtb-0183fdc0e50a1ff6a",
            "subnet_id": "subnet-0641589e58b8cbf7c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "183726524472",
            "id": "rtbassoc-0cfa8b7b243561ab0",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.subnet_base.aws_route_table.route-table-public-for-as",
            "module.subnet_base.aws_subnet.public",
            "module.vpc_base.aws_internet_gateway.igw",
            "module.vpc_base.aws_vpc.VPC_structure"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_base",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "task-1-rt-assocation-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073e8bb4c932e94d9",
            "region": "us-east-1",
            "route_table_id": "rtb-0183fdc0e50a1ff6a",
            "subnet_id": "subnet-05c92a71b19b20924"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "183726524472",
            "id": "rtbassoc-073e8bb4c932e94d9",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.subnet_base.aws_route_table.route-table-public-for-as",
            "module.subnet_base.aws_subnet.public",
            "module.vpc_base.aws_internet_gateway.igw",
            "module.vpc_base.aws_vpc.VPC_structure"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_base",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183726524472:subnet/subnet-0fa6caf093023c039",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa6caf093023c039",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "183726524472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Nginx-Subnet-Private-private-1",
              "Tier": "Private"
            },
            "tags_all": {
              "Name": "Nginx-Subnet-Private-private-1",
              "Tier": "Private"
            },
            "vpc_id": "vpc-04b772b5b56bea23d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "183726524472",
            "id": "subnet-0fa6caf093023c039",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc_base.aws_vpc.VPC_structure"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "private-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183726524472:subnet/subnet-0f6ea9a8cf593cfce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6ea9a8cf593cfce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "183726524472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Nginx-Subnet-Private-private-2",
              "Tier": "Private"
            },
            "tags_all": {
              "Name": "Nginx-Subnet-Private-private-2",
              "Tier": "Private"
            },
            "vpc_id": "vpc-04b772b5b56bea23d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "183726524472",
            "id": "subnet-0f6ea9a8cf593cfce",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc_base.aws_vpc.VPC_structure"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnet_base",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183726524472:subnet/subnet-0641589e58b8cbf7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0641589e58b8cbf7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "183726524472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Nginx-Subnet-Public-public-1-as-2",
              "Tier": "Public"
            },
            "tags_all": {
              "Name": "Nginx-Subnet-Public-public-1-as-2",
              "Tier": "Public"
            },
            "vpc_id": "vpc-04b772b5b56bea23d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "183726524472",
            "id": "subnet-0641589e58b8cbf7c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc_base.aws_vpc.VPC_structure"
          ]
        },
        {
          "index_key": "public-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183726524472:subnet/subnet-05c92a71b19b20924",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c92a71b19b20924",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "183726524472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Nginx-Subnet-Public-public-2-as-2",
              "Tier": "Public"
            },
            "tags_all": {
              "Name": "Nginx-Subnet-Public-public-2-as-2",
              "Tier": "Public"
            },
            "vpc_id": "vpc-04b772b5b56bea23d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "183726524472",
            "id": "subnet-05c92a71b19b20924",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc_base.aws_vpc.VPC_structure"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_base",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-002c543b86ee23fde",
            "arn": "arn:aws:ec2:us-east-1:183726524472:elastic-ip/eipalloc-002c543b86ee23fde",
            "association_id": "eipassoc-031583160de559879",
            "domain": "vpc",
            "id": "eipalloc-002c543b86ee23fde",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06be1e61f5e32253f",
            "private_dns": "ip-10-0-1-229.ec2.internal",
            "private_ip": "10.0.1.229",
            "public_dns": "ec2-3-93-137-97.compute-1.amazonaws.com",
            "public_ip": "3.93.137.97",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "Nginxp-infra---elastic-ip"
            },
            "tags_all": {
              "Name": "Nginxp-infra---elastic-ip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "183726524472",
            "id": "eipalloc-002c543b86ee23fde",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.vpc_base",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183726524472:internet-gateway/igw-06c0f4cb92b05ea24",
            "id": "igw-06c0f4cb92b05ea24",
            "owner_id": "183726524472",
            "region": "us-east-1",
            "tags": {
              "Name": "Nginxp-infra---igw"
            },
            "tags_all": {
              "Name": "Nginxp-infra---igw"
            },
            "vpc_id": "vpc-04b772b5b56bea23d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "183726524472",
            "id": "igw-06c0f4cb92b05ea24",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc_base.aws_vpc.VPC_structure"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_base",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-002c543b86ee23fde",
            "association_id": "eipassoc-031583160de559879",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0efb109a5734a71da",
            "network_interface_id": "eni-06be1e61f5e32253f",
            "private_ip": "10.0.1.229",
            "public_ip": "3.93.137.97",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0641589e58b8cbf7c",
            "tags": {
              "Name": "Nginxp-infra---nat-gt"
            },
            "tags_all": {
              "Name": "Nginxp-infra---nat-gt"
            },
            "vpc_id": "vpc-04b772b5b56bea23d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "183726524472",
            "id": "nat-0efb109a5734a71da",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.subnet_base.aws_subnet.public",
            "module.vpc_base.aws_eip.elastic-ip",
            "module.vpc_base.aws_internet_gateway.igw",
            "module.vpc_base.aws_vpc.VPC_structure"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_base",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC_structure",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183726524472:vpc/vpc-04b772b5b56bea23d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01636f047d3e5c511",
            "default_route_table_id": "rtb-0ff9eaa2e5f606657",
            "default_security_group_id": "sg-036615f63bf49fed5",
            "dhcp_options_id": "dopt-0bbcf9fddf1b952ff",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04b772b5b56bea23d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ff9eaa2e5f606657",
            "owner_id": "183726524472",
            "region": "us-east-1",
            "tags": {
              "Name": "Nginxp-infra--"
            },
            "tags_all": {
              "Name": "Nginxp-infra--"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "183726524472",
            "id": "vpc-04b772b5b56bea23d",
            "region": "us-east-1"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}